Changes for 1.6.1.4
* Adding some more sounds for ancient/classical era. (veqryn)

* Adding some more ww2 sounds and national anthems for main players. (hepster)

* Allowing air movement over neutrals and enemy territories so long as movement over neutrals is allowed, and no nonparatrooping units are present. (veqryn)

* Creating caching mechanism for sound clips, so that there are never more than 24 sound clips being held in memory. This should prevent errors in MacOS and Linux, which can not handle having large number of sound clips open at same time. This may however result in a delay before hearing clips, and still could result in errors if clips are really long. (veqryn)

* Fixed null pointer error for a trigger based game property change of a field that starts out as null. (veqryn)

* Fixed bug in strategic bombing that allowed strategic bombing of units that can be damaged, which were also being transported. (veqryn)

* Adding scroll bars to notification messages window. (veqryn)

* Increasing max memory from 640mb to 768mb, and up to 896mb for online games. (veqryn)

* Moved all sounds to a specific "era" folder (ww2, preindustrial, classical, future) and changing how sounds are found again, so that there should no longer be any need for duplicate sound files. Now all sounds should come with TripleA, and you can use the "sounds.properties" file to cherry pick which sounds you want. (veqryn)

* Created a "sounds.properties" file which allows you to specify which era of sounds (ww2, preindustrial, classical, future) you are using, and also set up custom sound choices for each sound location path. (veqryn)

* Getting TripleA Map Panel to center on the capital of a player, whenever we switch to a new player's phase. (veqryn)
